# NotClassic

./: .gitignore  LICENSE  Makefile  README.md  install-desktop-entry-amd.sh  install-desktop-entry-linux.tar.xz  install-desktop-entry-nogpu.sh  install-desktop-entry-nvidia.sh  install-desktop-entry-nvidialaptop.sh  readme.md
.github/workflows/: NAndroid.yml  NLinux.yml  NWindows.yml  build.yml  build_3ds.yml  build_android.yml  build_dreamcast.yml  build_freebsd.yml  build_gba.yml  build_gc.yml  build_haiku.yml  build_ios.yml  build_linux.yml  build_mac64.yml  build_macclassic.yml  build_n64.yml  build_nds.yml  build_netbsd.yml  build_ps1.yml  build_ps2.yml  build_ps3.yml  build_psp.yml  build_saturn.yml  build_switch.yml  build_symbian.yml  build_vita.yml  build_webclient.yml  build_wii.yml  build_wiiu.yml  build_win-arm.yml  build_windows.yml  build_xbox.yml  build_xbox360.yml  cmake-multi-platform.yml  legacy_android.yml  main.yml  modern_android.yml
.github/workflows/Unsupported/: build_gba.yml  build_mac32.yml  build_macclassic.yml  build_saturn.yml  build_xbox360.yml
.github/workflows/unsupported/: build_haiku.yml  build_mac32.yml  build_netbsd.yml  build_ps1.yml  build_switch.yml  build_vita.yml  build_windows.yml
Photos/: Example of photos for... readme's.txt
Python/: readme.md
Python/BadApple/: 1.video_to_ascii.py  2.to_fix.py  3.merge_frames_to_c.py
Python/bstream/: bstream_screen.py
Python/chatgpt/: chatgpt_server.py
Python/gemini/: gemini_server.py
Python/stream/: stream_screen.py  stream_screen_singleplayer.py
Python/translator/: translator (Microsoft azure) .py
android/: app-release-signed.apk.idsig
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
maps/: aaa.cw  aaaa.cw  aaaaa.cw  asd.cw  empty.cw  parkkk.cw  saaaa.cw
misc/android/app/: CMakeLists.txt  build.gradle
misc/android/app/src/main/: AndroidManifest.xml
misc/android/app/src/main/java/com/notclassic/: CCFileProvider.java  CCMotionListener.java  CCView.java  MainActivity.java
misc/ios/: Makefile
misc/linux/: install-desktop-entry.sh
src/: Audio.c  Audio.h  BStream.c  BStream.h  BadAppleFrames.h  Camera.c  CensorWords.h  Chat.c  Chat.h  ChatGPT.c  ChatGPT.h  ChatMacros.c  ChatMacros.h  Commands.c  Commands.h  Constants.h  Cuboid.h  CuboidCommand.h  Entity.c  Entity.h  EntityComponents.c  EntityComponents.h  Game.c  Game.c.bak  Game.h  Gemini.c  Gemini.h  Graphics_GL1.c  Gui.h  Hacks.c  Hacks.h  InputHandler.c  LBackend.h  LScreens.c  LWeb.c  LWeb.h  LWidgets.c  Launcher.c  Logger.c  Lolcat.c  (+19 more)
src/android/: Platform_Android.c
