#
# Copyright (C) The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

cmake_minimum_required(VERSION 3.4.1)

# build native_app_glue as a static lib
set(${CMAKE_C_FLAGS}, "${CMAKE_C_FLAGS}")
# now build app's shared lib
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -Wall -Werror")

set(ROOT_DIR ${CMAKE_CURRENT_LIST_DIR}/../../..)

add_library(classicube SHARED
        ${ROOT_DIR}/src/PluginAPI.c
        ${ROOT_DIR}/src/IsometricDrawer.c
        ${ROOT_DIR}/src/Builder.c
        ${ROOT_DIR}/src/ExtMath.c
        ${ROOT_DIR}/src/_ftbitmap.c
        ${ROOT_DIR}/src/Utils.c
        ${ROOT_DIR}/src/Camera.c
        ${ROOT_DIR}/src/Game.c
        ${ROOT_DIR}/src/GameVersion.c
        ${ROOT_DIR}/src/_ftbase.c
        ${ROOT_DIR}/src/Graphics_GL2.c
        ${ROOT_DIR}/src/Deflate.c
        ${ROOT_DIR}/src/_cff.c
        ${ROOT_DIR}/src/_ftsynth.c
        ${ROOT_DIR}/src/String.c
        ${ROOT_DIR}/src/LWidgets.c
        ${ROOT_DIR}/src/Options.c
        ${ROOT_DIR}/src/Drawer2D.c
        ${ROOT_DIR}/src/Server.c
        ${ROOT_DIR}/src/Entity.c
        ${ROOT_DIR}/src/Drawer.c
        ${ROOT_DIR}/src/Vorbis.c
        ${ROOT_DIR}/src/Protocol.c
        ${ROOT_DIR}/src/World.c
        ${ROOT_DIR}/src/SelOutlineRenderer.c
        ${ROOT_DIR}/src/Platform_Posix.c
        ${ROOT_DIR}/src/LScreens.c
        ${ROOT_DIR}/src/_truetype.c
        ${ROOT_DIR}/src/_ftglyph.c
        ${ROOT_DIR}/src/Model.c
        ${ROOT_DIR}/src/_autofit.c
        ${ROOT_DIR}/src/Vectors.c
        ${ROOT_DIR}/src/HeldBlockRenderer.c
        ${ROOT_DIR}/src/Inventory.c
        ${ROOT_DIR}/src/Launcher.c
        ${ROOT_DIR}/src/Block.c
        ${ROOT_DIR}/src/LWeb.c
        ${ROOT_DIR}/src/Stream.c
        ${ROOT_DIR}/src/Lighting.c
        ${ROOT_DIR}/src/Resources.c
        ${ROOT_DIR}/src/PackedCol.c
        ${ROOT_DIR}/src/Screens.c
        ${ROOT_DIR}/src/Formats.c
        ${ROOT_DIR}/src/_sfnt.c
        ${ROOT_DIR}/src/Bitmap.c
        ${ROOT_DIR}/src/EntityComponents.c
        ${ROOT_DIR}/src/_pshinter.c
        ${ROOT_DIR}/src/Http_Worker.c
        ${ROOT_DIR}/src/MapRenderer.c
        ${ROOT_DIR}/src/Audio.c
        ${ROOT_DIR}/src/_ftinit.c
        ${ROOT_DIR}/src/Event.c
        ${ROOT_DIR}/src/Logger.c
        ${ROOT_DIR}/src/Widgets.c
        ${ROOT_DIR}/src/TexturePack.c
        ${ROOT_DIR}/src/Menus.c
        ${ROOT_DIR}/src/BlockPhysics.c
        ${ROOT_DIR}/src/_psmodule.c
        ${ROOT_DIR}/src/Chat.c
        ${ROOT_DIR}/src/Gui.c
        ${ROOT_DIR}/src/AxisLinesRenderer.c
        ${ROOT_DIR}/src/Picking.c
        ${ROOT_DIR}/src/_type1.c
        ${ROOT_DIR}/src/_smooth.c
        ${ROOT_DIR}/src/_psaux.c
        ${ROOT_DIR}/src/Generator.c
        ${ROOT_DIR}/src/Input.c
        ${ROOT_DIR}/src/Particle.c
        ${ROOT_DIR}/src/Physics.c
        ${ROOT_DIR}/src/SelectionBox.c
        ${ROOT_DIR}/src/EnvRenderer.c
        ${ROOT_DIR}/src/Animations.c
        ${ROOT_DIR}/src/LBackend.c
        ${ROOT_DIR}/src/SystemFonts.c
        ${ROOT_DIR}/src/Commands.c
        ${ROOT_DIR}/src/EntityRenderers.c
        ${ROOT_DIR}/src/Audio_SLES.c
        ${ROOT_DIR}/src/TouchUI.c
        ${ROOT_DIR}/src/LBackend_Android.c
        ${ROOT_DIR}/src/InputHandler.c
        ${ROOT_DIR}/src/MenuOptions.c
        ${ROOT_DIR}/src/FancyLighting.c
        ${ROOT_DIR}/src/Queue.c
        ${ROOT_DIR}/src/SSL.c
        ${ROOT_DIR}/src/Certs.c
        ${ROOT_DIR}/src/android/Platform_Android.c
        ${ROOT_DIR}/src/android/Window_Android.c
        ${ROOT_DIR}/third_party/bearssl/aes_big_cbcdec.c
        ${ROOT_DIR}/third_party/bearssl/aes_big_cbcenc.c
        ${ROOT_DIR}/third_party/bearssl/aes_big_ctr.c
        ${ROOT_DIR}/third_party/bearssl/aes_big_ctrcbc.c
        ${ROOT_DIR}/third_party/bearssl/aes_big_dec.c
        ${ROOT_DIR}/third_party/bearssl/aes_big_enc.c
        ${ROOT_DIR}/third_party/bearssl/aes_common.c
        ${ROOT_DIR}/third_party/bearssl/aesctr_drbg.c
        ${ROOT_DIR}/third_party/bearssl/aes_x86ni.c
        ${ROOT_DIR}/third_party/bearssl/aes_x86ni_cbcdec.c
        ${ROOT_DIR}/third_party/bearssl/aes_x86ni_cbcenc.c
        ${ROOT_DIR}/third_party/bearssl/aes_x86ni_ctr.c
        ${ROOT_DIR}/third_party/bearssl/aes_x86ni_ctrcbc.c
        ${ROOT_DIR}/third_party/bearssl/asn1enc.c
        ${ROOT_DIR}/third_party/bearssl/ccm.c
        ${ROOT_DIR}/third_party/bearssl/ccopy.c
        ${ROOT_DIR}/third_party/bearssl/chacha20_ct.c
        ${ROOT_DIR}/third_party/bearssl/chacha20_sse2.c
        ${ROOT_DIR}/third_party/bearssl/dec32be.c
        ${ROOT_DIR}/third_party/bearssl/dec32le.c
        ${ROOT_DIR}/third_party/bearssl/dec64be.c
        ${ROOT_DIR}/third_party/bearssl/dec64le.c
        ${ROOT_DIR}/third_party/bearssl/dig_oid.c
        ${ROOT_DIR}/third_party/bearssl/dig_size.c
        ${ROOT_DIR}/third_party/bearssl/ec_all_m31.c
        ${ROOT_DIR}/third_party/bearssl/ec_c25519_i31.c
        ${ROOT_DIR}/third_party/bearssl/ec_c25519_m31.c
        ${ROOT_DIR}/third_party/bearssl/ec_c25519_m62.c
        ${ROOT_DIR}/third_party/bearssl/ec_c25519_m64.c
        ${ROOT_DIR}/third_party/bearssl/ec_curve25519.c
        ${ROOT_DIR}/third_party/bearssl/ec_default.c
        ${ROOT_DIR}/third_party/bearssl/ecdsa_atr.c
        ${ROOT_DIR}/third_party/bearssl/ecdsa_default_vrfy_asn1.c
        ${ROOT_DIR}/third_party/bearssl/ecdsa_default_vrfy_raw.c
        ${ROOT_DIR}/third_party/bearssl/ecdsa_i31_bits.c
        ${ROOT_DIR}/third_party/bearssl/ecdsa_i31_vrfy_asn1.c
        ${ROOT_DIR}/third_party/bearssl/ecdsa_i31_vrfy_raw.c
        ${ROOT_DIR}/third_party/bearssl/ec_p256_m31.c
        ${ROOT_DIR}/third_party/bearssl/ec_p256_m62.c
        ${ROOT_DIR}/third_party/bearssl/ec_p256_m64.c
        ${ROOT_DIR}/third_party/bearssl/ec_prime_i31.c
        ${ROOT_DIR}/third_party/bearssl/ec_secp256r1.c
        ${ROOT_DIR}/third_party/bearssl/ec_secp384r1.c
        ${ROOT_DIR}/third_party/bearssl/ec_secp521r1.c
        ${ROOT_DIR}/third_party/bearssl/enc32be.c
        ${ROOT_DIR}/third_party/bearssl/enc32le.c
        ${ROOT_DIR}/third_party/bearssl/enc64be.c
        ${ROOT_DIR}/third_party/bearssl/enc64le.c
        ${ROOT_DIR}/third_party/bearssl/gcm.c
        ${ROOT_DIR}/third_party/bearssl/ghash_ctmul64.c
        ${ROOT_DIR}/third_party/bearssl/ghash_ctmul.c
        ${ROOT_DIR}/third_party/bearssl/ghash_pclmul.c
        ${ROOT_DIR}/third_party/bearssl/hmac.c
        ${ROOT_DIR}/third_party/bearssl/hmac_ct.c
        ${ROOT_DIR}/third_party/bearssl/hmac_drbg.c
        ${ROOT_DIR}/third_party/bearssl/i31_add.c
        ${ROOT_DIR}/third_party/bearssl/i31_bitlen.c
        ${ROOT_DIR}/third_party/bearssl/i31_decmod.c
        ${ROOT_DIR}/third_party/bearssl/i31_decode.c
        ${ROOT_DIR}/third_party/bearssl/i31_decred.c
        ${ROOT_DIR}/third_party/bearssl/i31_encode.c
        ${ROOT_DIR}/third_party/bearssl/i31_fmont.c
        ${ROOT_DIR}/third_party/bearssl/i31_iszero.c
        ${ROOT_DIR}/third_party/bearssl/i31_moddiv.c
        ${ROOT_DIR}/third_party/bearssl/i31_modpow2.c
        ${ROOT_DIR}/third_party/bearssl/i31_modpow.c
        ${ROOT_DIR}/third_party/bearssl/i31_montmul.c
        ${ROOT_DIR}/third_party/bearssl/i31_mulacc.c
        ${ROOT_DIR}/third_party/bearssl/i31_muladd.c
        ${ROOT_DIR}/third_party/bearssl/i31_ninv31.c
        ${ROOT_DIR}/third_party/bearssl/i31_reduce.c
        ${ROOT_DIR}/third_party/bearssl/i31_rshift.c
        ${ROOT_DIR}/third_party/bearssl/i31_sub.c
        ${ROOT_DIR}/third_party/bearssl/i31_tmont.c
        ${ROOT_DIR}/third_party/bearssl/i32_div32.c
        ${ROOT_DIR}/third_party/bearssl/i62_modpow2.c
        ${ROOT_DIR}/third_party/bearssl/md5.c
        ${ROOT_DIR}/third_party/bearssl/md5sha1.c
        ${ROOT_DIR}/third_party/bearssl/multihash.c
        ${ROOT_DIR}/third_party/bearssl/poly1305_ctmul.c
        ${ROOT_DIR}/third_party/bearssl/poly1305_ctmulq.c
        ${ROOT_DIR}/third_party/bearssl/prf.c
        ${ROOT_DIR}/third_party/bearssl/prf_md5sha1.c
        ${ROOT_DIR}/third_party/bearssl/prf_sha256.c
        ${ROOT_DIR}/third_party/bearssl/prf_sha384.c
        ${ROOT_DIR}/third_party/bearssl/rsa_default_pkcs1_vrfy.c
        ${ROOT_DIR}/third_party/bearssl/rsa_default_priv.c
        ${ROOT_DIR}/third_party/bearssl/rsa_default_pub.c
        ${ROOT_DIR}/third_party/bearssl/rsa_i31_pkcs1_vrfy.c
        ${ROOT_DIR}/third_party/bearssl/rsa_i31_priv.c
        ${ROOT_DIR}/third_party/bearssl/rsa_i31_pub.c
        ${ROOT_DIR}/third_party/bearssl/rsa_i62_pkcs1_vrfy.c
        ${ROOT_DIR}/third_party/bearssl/rsa_i62_priv.c
        ${ROOT_DIR}/third_party/bearssl/rsa_i62_pub.c
        ${ROOT_DIR}/third_party/bearssl/rsa_pkcs1_sig_unpad.c
        ${ROOT_DIR}/third_party/bearssl/sha1.c
        ${ROOT_DIR}/third_party/bearssl/sha2big.c
        ${ROOT_DIR}/third_party/bearssl/sha2small.c
        ${ROOT_DIR}/third_party/bearssl/ssl_client.c
        ${ROOT_DIR}/third_party/bearssl/ssl_client_default_rsapub.c
        ${ROOT_DIR}/third_party/bearssl/ssl_client_full.c
        ${ROOT_DIR}/third_party/bearssl/ssl_engine.c
        ${ROOT_DIR}/third_party/bearssl/ssl_engine_default_aescbc.c
        ${ROOT_DIR}/third_party/bearssl/ssl_engine_default_aesccm.c
        ${ROOT_DIR}/third_party/bearssl/ssl_engine_default_aesgcm.c
        ${ROOT_DIR}/third_party/bearssl/ssl_engine_default_chapol.c
        ${ROOT_DIR}/third_party/bearssl/ssl_engine_default_ec.c
        ${ROOT_DIR}/third_party/bearssl/ssl_engine_default_ecdsa.c
        ${ROOT_DIR}/third_party/bearssl/ssl_engine_default_rsavrfy.c
        ${ROOT_DIR}/third_party/bearssl/ssl_hashes.c
        ${ROOT_DIR}/third_party/bearssl/ssl_hs_client.c
        ${ROOT_DIR}/third_party/bearssl/ssl_io.c
        ${ROOT_DIR}/third_party/bearssl/ssl_rec_cbc.c
        ${ROOT_DIR}/third_party/bearssl/ssl_rec_ccm.c
        ${ROOT_DIR}/third_party/bearssl/ssl_rec_chapol.c
        ${ROOT_DIR}/third_party/bearssl/ssl_rec_gcm.c
        ${ROOT_DIR}/third_party/bearssl/x509_minimal.c
        ${ROOT_DIR}/third_party/bearssl/x509_minimal_full.c
        )

target_link_libraries(classicube
    EGL
    GLESv2
    log)
